--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <a
-      href="https://github.com/danchitnis/EEsim"
+      href="https://github.com/danchitnis/webterminal"
       class="github-corner"
       aria-label="View source on GitHub"
       ><svg
